--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ dependencies {
 //	테스트를 위한 의존성
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+//	DB 연결을 위한 위존성
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.mariadb.jdbc:mariadb-java-client'
+
+
+
 //	오토 리런
 //	implementation 'org.springframework.boot:spring-boot-devtools'
 
