--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,15 +5,17 @@
 #spring.datasource.password=1234
 
 
-
-
+#
 server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/member
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/basic
     username: root
     password: 1234
+
+
 
 #
 #---
