--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,19 @@ spring:
     url: jdbc:mariadb://localhost:3306/basic
     username: root
     password: 1234
-
+  jpa:
+    database: mysql
+#    innoDB  엔진사용 설정
+    database-platform: org.hibernate.dialect.MariaDBDialect
+#    스키마는 사전생성 필요.
+    generate-ddl: true
+    hibernate:
+      ddl-auto: create
+    show-sql: true    # 쿼리문 실행시 쿼리가 console창에 보여지도록 설정.
+#      create 옵션은 매번 table을 drop 후 생성
+#      update옵션은 변경사항만 alter를 적용
+#      validate는 실제 DB와의 차이만을 check
+#      실무에서는 update 또는 validate 사용
 
 
 #
