--- a/build.gradle
+++ b/build.gradle
@@ -35,15 +35,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.mariadb.jdbc:mariadb-java-client'
 
- 	implementation 'org.springframework.boot:spring-boot-startejr-data-jpa'
-//	오토 리런
-//	implementation 'org.sprinKKgframework.boot:spring-boot-devtools'
+// jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 
 //	lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
 }
+
 tasks.named('test') {
 //	테스트 라이브러리로 주로 JUnit을 사용
 	useJUnitPlatform()
