--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,15 @@
 #server:
 #  port: 8081
 spring:
+#
+##  컨트롤러와 jsp사용시에 접두어, 접미어 설정.
+## 기본설정이 타임리프 이므로 타임리프 의존성 제거해야 jsp 사용가능.
+#  mvc:
+#    view:
+#      prefix: /WEB-INF/views/
+#      suffix: .jsp
+
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/basic
